# load

./: LICENSE  README.md  index.html  package.json  vite.config.ts
src/: App.tsx  Loading.tsx  Spinner.tsx  aistatus.tsx  autocomplete.ts  editor.tsx  global.css  icon.ts  keybinds.ts  logs.ts  main.tsx  settings.ts  titlebar.tsx  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  lib.rs  main.rs  pools.rs  task.rs
