[package]
name = "load"
version = "0.1.0"
description = "Load Code Editor"
authors = ["lu2000luk"]
edition = "2021"

[lib]
name = "load_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = "1.48.0"
tree-sitter = "0.25.10"
tree-sitter-php = "0.24.2"
tree-sitter-ruby = "0.23.1"
tree-sitter-bash = "0.25.0"
tree-sitter-powershell = "0.25.9"
tree-sitter-haskell = "0.23.1"
tree-sitter-ocaml = "0.24.2"
tree-sitter-swift = "0.7.1"
tree-sitter-rust = "0.24.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-javascript = "0.25.0"
tree-sitter-go = "0.25.0"
tree-sitter-java = "0.23.5"
tree-sitter-c = "0.24.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-zig = "1.1.2"
tree-sitter-html = "0.23.2"
tree-sitter-lua = "0.2.0"
tree-sitter-json = "0.24.8"
tree-sitter-css = "0.25.0"
tree-sitter-dart = "0.0.4"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tree-sitter-python = "0.25.0"
ignore = "0.4"
tree-sitter-md = "0.5.1"
which = "8.0.0"
